--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
 TOKEN_SECRET=y0uRt0k3N$eCr3T
-CLOUDINARY_NAME = 'dxztm8k4q'
-CLOUDINARY_KEY = '649143715997567'
-CLOUDINARY_SECRET = 'ijmFk-jMQQ29TpZElMGYWQGvMzU'
+REACT_APP_ENDPOINT = http://localhost:5005
