--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "StyleScript-server-server",
+  "name": "Mycloset-server-server",
   "version": "0.0.0",
   "private": true,
   "scripts": {
